--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ leptos = { version = "0.5", features = ["csr", "nightly"] }
 console_error_panic_hook = "0.1.7"
 leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
 leptos_router = { version = "0.5", features = ["csr", "nightly"] }
+csv = "1.3.0"
+handlebars = "5.1.1"
+leptos-use = "0.9.0"
