--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ leptos_router = { version = "0.5", features = ["csr", "nightly"] }
 csv = "1.3.0"
 handlebars = "5.1.1"
 leptos-use = "0.9.0"
+serde_json = "1.0.113"
