--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ csv = "1.3.0"
 handlebars = "5.1.1"
 leptos-use = "0.9.0"
 serde_json = "1.0.113"
+web-sys = { version = "0.3.67", features = ["FileReader"] }
+urlencoding = "2.1.3"
