--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         version: 'latest'
     - name: Build
-      run: trunk build --release --public-url "${GITHUB_REPOSITORY#*/}
+      run: trunk build --release --public-url "${GITHUB_REPOSITORY#*/}"
       # Deploy to gh-pages branch
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
