--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,11 +31,17 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install nightly Rust
       uses: dtolnay/rust-toolchain@nightly
+    - name: Setup node
+      uses: actions/setup-node@v4
     - name: Add WASM target
       run: rustup target add wasm32-unknown-unknown
+    - name: Install tailwindcss
+      run: npm i -g tailwindcss
     - uses: jetli/trunk-action@v0.4.0
       with:
         version: 'latest'
+    - name: Build tailwind
+      run: npx tailwindcss -i style/main.css -o style/output.css
     - name: Build
       run: trunk build --release --public-url "${GITHUB_REPOSITORY#*/}"
       # Deploy to gh-pages branch
